--- a/Web.Statu/Views/Data/ImportData.cshtml
+++ b/Web.Statu/Views/Data/ImportData.cshtml
@@ -12,7 +12,7 @@
 @{
 
     ViewBag.Title = "Import dat z CSV souboru";
-    ViewBag.SubTitle = "Postup pro netechnické uživatele";
+    ViewBag.SubTitle = "Hotovo";
 
     ApiResponseStatus err = ViewBag.ApiResponseError;
 
