--- a/Web.Statu/Views/Data/ImportDataProcess.cshtml
+++ b/Web.Statu/Views/Data/ImportDataProcess.cshtml
@@ -11,7 +11,7 @@
 @using System.Text.RegularExpressions;
 @{
 
-    ViewBag.Title = "Přidání datasetu pro normální lidi : Typy hodnot";
+    ViewBag.Title = "Import dat z CSV souboru";
     ViewBag.SubTitle = "Postup pro netechnické uživatele";
 
     ApiResponseStatus err = ViewBag.ApiResponseError;
