--- a/Web.Statu/Views/Data/CreateSimple.cshtml
+++ b/Web.Statu/Views/Data/CreateSimple.cshtml
@@ -75,25 +75,25 @@
             <div class="form-group">
                 @Html.Label("name", "Jméno ", new { @class = "col-sm-2 control-label" })
                 <div class="col-sm-10">
-                    @Html.TextBox("name","", new { @class = "form-control", placeholder = "Jméno datasetu" })
+                    @Html.TextBox("name", "", new { @class = "form-control", placeholder = "Jméno datasetu" })
                     <span class="help-block"><span class="text-danger">Vystižné jméno datasetu, pod kterým bude uložen v Hlídač.</span></span>
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.Label("delimiter", "Oddělovač položek (sloupců) v CSV", new { @class = "col-sm-2 control-label" })
-                <div class="col-sm-10">
-                    <select name="delimiter">
-                        <option value="," selected="selected">, (čárka)</option>
-                        <option value=";">; (středník)</option>
-                        <option value="\t">tab (tabulátor)</option>
-                    </select>
                 </div>
             </div>
             <div class="form-group">
                 @Html.Label("data", "CSV soubor v UTF-8 kódování", new { @class = "col-sm-2 control-label" })
                 <div class="col-sm-10">
-                    <input type="file" name="file" />
+                    <input type="file" name="file" class="form-control" />
                     <span class="help-block">Omezení: Soubor může být veliký maximálně 50MB.</span>
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.Label("delimiter", "Oddělovač položek (sloupců) v CSV", new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-10">
+                    <div class="radio" style="margin-left:20px;">
+                        <input checked="checked" type="radio" name="delimiter" value="," /><code>,</code> (čárka) <br />
+                        <input type="radio" name="delimiter" value=";" /><code>;</code> (středník) <br />
+                        <input type="radio" name="delimiter" value="\t" /><code>tab</code> (tabulátor) <br />
+                    </div>
                 </div>
             </div>
 
