--- a/Web.Statu/Views/Data/Delete.cshtml
+++ b/Web.Statu/Views/Data/Delete.cshtml
@@ -32,14 +32,28 @@
 
 <div class="row">
     <div class="col-xs-12">
-        <h2>Opravdu chcete smazat dataset <b>@Model.Registration().name</b>?</h2>
+        <h2>Opravdu chcete smazat dataset ID: <b>@Model.DatasetId</b>?</h2>
         <p>
             Dataset  @Devmasters.Core.Lang.Plural.GetWithZero((int)numOfRec, "neobsahuje žádný záznam", "obsahuje jeden záznam", "obsahuje {0} záznamy", "obsahuje {0} záznamů").
             <div class="text-danger">Tato operace je nevratná, smažeme všechna data BEZ NÁHRADY A BEZ MOŽNOSTI OBNOVY !</div>
         </p>
-        <p>
-            <a class="btn btn-danger btn-lg" href="@Url.Action("delete", new { id=Model.DatasetId, confirmation = "YES"})" role="button">ANO, smazat!</a>
-            <a class="btn btn-primary btn-lg" href="@Url.Action("manage", new { id=Model.DatasetId})" role="button">Nemazat, prosim.</a>
-        </p>
+        <form method="post" class="form-horizontal form-control-new--small">
+            <p>
+                <div class="form-group">
+                    <div class="text-info">Potvrďte smazání datasetu napsáním jeho ID do formuláře</div>
+                    @Html.Label("confirmation", "ID mazaného datasetu", new { @class = "col-sm-2 control-label" })
+                    <div class="col-sm-10">
+                        @Html.TextBox("confirmation", "", new { @class = "form-control", placeholder = "ID datasetu" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <a href="/manage/@Model.DatasetId" class="btn btn-default btn-lg">Zpět</a>
+                        <button type="submit" class="btn btn-danger btn-lg">Opravdu chci smazat tento dataset!</button>
+
+                    </div>
+                </div>
+            </p>
+        </form>
     </div>
     </div>
